[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/theme/UI.tres" type="Theme" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/CourierPrime-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/menu/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://src/menu/SettingsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/menu/AchievementMenu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -260.0
margin_right = 100.0
custom_constants/separation = 12

[node name="Start" type="Button" parent="Options"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "New Game"

[node name="Settings" type="Button" parent="Options"]
margin_top = 62.0
margin_right = 200.0
margin_bottom = 112.0
rect_min_size = Vector2( 200, 50 )
text = "Settings"

[node name="Achievements" type="Button" parent="Options"]
margin_top = 124.0
margin_right = 200.0
margin_bottom = 174.0
rect_min_size = Vector2( 200, 50 )
text = "Achievements"

[node name="Quit" type="Button" parent="Options"]
margin_top = 186.0
margin_right = 200.0
margin_bottom = 236.0
rect_min_size = Vector2( 200, 50 )
text = "Quit"

[node name="Title" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -197.0
margin_top = 20.0
margin_right = 197.0
margin_bottom = 84.0
custom_constants/separation = 0

[node name="Icon" type="TextureRect" parent="Title"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Title"]
margin_left = 64.0
margin_top = 11.0
margin_right = 394.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
text = "ROCKET SECURITY"

[node name="LLC" type="Label" parent="."]
margin_left = 523.0
margin_top = 56.0
margin_right = 565.0
margin_bottom = 84.0
text = "LLC"

[node name="SettingsMenu" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AchievementMenu" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="pressed" from="Options/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Options/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Options/Achievements" to="." method="_on_Achievements_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_Quit_pressed"]
